# editOS

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  gen-clangd.sh  grub.cfg  install_deps.sh  linker.ld  run.sh
cmake/: module-util.cmake
cross-compiler-setup/: .gitignore  binutils.sh  downloads.sh
src/: boot.s.nofb
src/abi/: _mod.cmake  icxx_atexit.cpp  icxx_guard.cpp
src/apps/editor/: _mod.cmake  editor.cpp
src/arch/: arch.cmake
src/arch/x86/: i386.cmake  x86.cmake
src/arch/x86/boot/: boot.s  entry_point.cpp  multiboot2.cpp  multiboot2.hpp
src/arch/x86/common/board/: pc_devices.cpp  pc_devices.hpp
src/arch/x86/common/drv/: register.cpp  register.hpp
src/arch/x86/common/drv/serial_16550/: serial_16550.cpp  serial_16550.hpp
src/arch/x86/common/graphics/: framebuffer.cpp  framebuffer.hpp
src/arch/x86/common/input/: keyboard.cpp  keyboard.hpp
src/arch/x86/common/io/: serial.cpp  serial.hpp
src/arch/x86/graphics/: framebuffer.cpp  framebuffer.hpp
src/arch/x86/i386/: linker.ld
src/arch/x86/i386/boot/: entry_point.cpp
src/arch/x86/i386/cpu/: cpu.cpp  cpu.hpp
src/arch/x86/i386/memory/: paging.cpp
src/arch/x86/i386/system/: system.cpp
src/arch/x86/input/: keyboard.cpp  keyboard.hpp
src/gfx/: canvas.cpp  canvas.hpp  shapes.cpp  shapes.hpp
src/gfx/text/: bitmap_font.cpp  bitmap_font.hpp  text.cpp  text.hpp
src/hal/: boot.hpp  framebuffer.hpp  keyboard.cpp  keyboard.hpp  serial.hpp
src/hw/boot/: multiboot2.cpp  multiboot2.hpp
src/hw/console/: iconsole.hpp  text_mode_console.cpp  text_mode_console.hpp
src/hw/graphics/: framebuffer.cpp  framebuffer.hpp
src/hw/io/: ports.hpp  serial.cpp  serial.hpp
src/hw/peripherals/: keyboard.cpp  keyboard.hpp
src/input/: editor.cpp  editor.hpp  keymap_us.cpp
src/kernel/: kernel.cpp  kernel.hpp  log.hpp  main.cpp  panic.hpp
src/kernel/abi/gcc/: int_arithmetic.cpp
src/kernel/abi/icxx/: pure_virtual.cpp
src/kernel/board/: serial_desc.hpp
src/kernel/boot/: boot_context.hpp  multiboot2.cpp  multiboot2.hpp
src/kernel/containers/: data_storage.hpp  flatmap.hpp  gap_buffer.hpp  stream.hpp  string.hpp
src/kernel/drv/: core.hpp  driver.hpp  global_core.cpp  global_core.hpp  type_tag.hpp
src/kernel/drv/serial/: serial.hpp
src/kernel/hal/: boot.hpp  cpu.hpp  framebuffer.hpp  interrupts.hpp  keyboard.hpp  paging.hpp  serial.hpp  timer.hpp
src/kernel/logging/: logging.cpp  logging.hpp
src/kernel/logging/backend/: buffered.hpp  callback.hpp  serial.hpp
src/kernel/memory/: byte_conversion.hpp  data_storage.hpp  data_view.hpp  global_hooks.cpp  heap.cpp  heap.hpp  tmp.cpp
src/kernel/memory/builtin/: bm_heap.cpp  bm_heap.hpp  bump_heap.cpp  bump_heap.hpp  pump_heap.cpp
src/kernel/modules/gfx/: _mod.cmake  canvas.cpp  canvas.hpp  color.hpp  shapes.cpp  shapes.hpp
src/kernel/modules/gfx/text/: text.hpp
src/kernel/modules/input/: _mod.cmake  keymap.hpp  keymap_us.cpp
src/kernel/modules/klibc/: _mod.cmake
src/kernel/modules/klibc/include/: cstdio  cstring  stdio.h  stdlib.h  string.h  unistd.h
src/kernel/modules/klibc/include/kernel/: log.hpp  panic.hpp
src/kernel/modules/klibc/src/: stdio.cpp  stdlib.cpp  string.cpp
src/kernel/modules/klibc/src/sys/: cdefs.hpp
src/kernel/modules/ui/: _mod.cmake
src/kernel/modules/ui/core/: text_area.cpp  text_area.hpp  widget.hpp
src/kernel/modules/ui/tty/: tty_text_area.cpp  tty_text_area.hpp
src/kernel/panic/: panic_impl.cpp
src/kernel/runtime/: cstring.cpp  memory.cpp
src/kernel/shell/: shell.cpp  shell.hpp
src/kernel/tty/: display.hpp  tty.cpp  tty.hpp
src/libs/containers/: _mod.cmake  data_storage.hpp  data_view.hpp  flatmap.hpp  gap_buffer.hpp  string.hpp
src/libs/math/: _mod.cmake  bit_logic.cpp  bit_logic.hpp
src/math/: bit_logic.cpp  bit_logic.hpp
src/memory/: heap.cpp  heap.hpp
src/ui/: console.hpp  widget.hpp  window.cpp  window.hpp
src/ui/core/: text_area.cpp  text_area.hpp  text_output.cpp  text_output.hpp  widget.hpp  window.cpp  window.hpp
src/ui/tty/: tty_text_area.cpp  tty_text_area.hpp
